# FluoroSense

./: Home.py  process_funcs.py  pyproject.toml  requirements.txt  styles.py
pages/: 1_🔬_Individual_Spectra.py  2_⏳_Time_Series_Measurement.py  3_🧪_Advanced_Spectrum_Analysis.py
