[project]
name = "fluorosense"
version = "0.1.0"
description = "Streamlit app for Jasco spectrofluorometer data analysis"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
  "streamlit>=1.37.0",
  "plotly>=5.15.0",
  "numpy<2",
  "pandas>=2.0.2",
  "scikit-learn>=1.3.0",
  "xlsxwriter>=3.0.3",
  "openpyxl>=3.1.2",
  "scipy>=1.11.0",
  "lmfit>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

